fix: ul 요소의 overflow-x 속성 추가

--- a/www/src/view/page.girls.scss
+++ b/www/src/view/page.girls.scss
@@ -1,6 +1,7 @@
 ul {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 
   li {
     display: flex;
